<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Geo Quiz</string>
    <string name="answer_true_button">YES</string>
    <string name="answer_false_button">NO</string>
    <string name="next_question_button">Next</string>
    <string name="wrong_answer_text">Wrong answer !</string>
    <string name="good_answer_text">Good answer !</string>
    <string name="prev_question_button">Prev</string>
    <string name="quiz_finish">Quiz finished</string>
    <string name="result_percent">Result: <xliff:g id="result_percent">%d%%</xliff:g></string>
    <string name="show_answer">Show answer</string>
    <string name="hint_warning">Do You really need a hint ?!</string>
    <string name="show_hint">Show hint !</string>
    <string name="hint_answer">Answer is: </string>
    <string name="hint_used">But you used the hint !!</string>
    <string name="help_button">Help</string>

    <plurals name="hints_left">
        <item quantity="one">%d hint left</item>
        <item quantity="other">%d hints left</item>
    </plurals>

</resources>