<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/textview_question"
        style="@style/textMediumBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="20dp"
        android:textAlignment="center"
        tools:ignore="KeyboardInaccessibleWidget"
        tools:text="Question" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_true"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/answer_true_button"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_false"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/answer_false_button"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/button_show_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_answer" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/prev_question_button"
            android:minWidth="55dp"
            android:minHeight="55dp"
            android:src="@drawable/arrow_left"
            tools:ignore="ButtonStyle,RtlHardcoded,ImageContrastCheck" />

        <ImageButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/next_question_button"
            android:minWidth="55dp"
            android:minHeight="55dp"
            android:src="@drawable/arrow_right"
            tools:ignore="ButtonStyle,RtlHardcoded,ImageContrastCheck" />

    </LinearLayout>

</LinearLayout>